# kmail

./: .clang-format  .clang-tidy  .cppcheck  .flake8  .gitignore  .gitlab-ci-lint.yml  BUILD_LOG.md  CHANGELOG.md  CMakeLists.txt  DEVELOPMENT.md  HANDOFF.md  README.md  config-enterprise.h.cmake  kmail-version.h.cmake
agents/: CMakeLists.txt
agents/archivemailagent/: CMakeLists.txt  addarchivemaildialog.cpp  addarchivemaildialog.h  addarchivemailwidget.cpp  addarchivemailwidget.h  archivemailagent.cpp  archivemailagent.h  archivemailagentutil.cpp  archivemailagentutil.h  archivemailinfo.cpp  archivemailinfo.h  archivemailkernel.cpp  archivemailkernel.h  archivemailmanager.cpp  archivemailmanager.h  archivemailrangewidget.cpp  archivemailrangewidget.h  archivemailwidget.cpp  archivemailwidget.h
agents/archivemailagent/autotests/: CMakeLists.txt  archivemailagentutiltest.cpp  archivemailagentutiltest.h  archivemailinfotest.cpp  archivemailinfotest.h  archivemailrangewidgettest.cpp  archivemailrangewidgettest.h  archivemailwidgettest.cpp  archivemailwidgettest.h  formatcomboboxtest.cpp  formatcomboboxtest.h  unitcomboboxtest.cpp  unitcomboboxtest.h
agents/archivemailagent/job/: archivejob.cpp  archivejob.h
agents/archivemailagent/widgets/: formatcombobox.cpp  formatcombobox.h  hourcombobox.cpp  hourcombobox.h  unitcombobox.cpp  unitcombobox.h
agents/followupreminderagent/: CMakeLists.txt  followupreminderagent.cpp  followupreminderagent.h  followupreminderinfo.cpp  followupreminderinfo.h  followupreminderinfoconfigwidget.cpp  followupreminderinfoconfigwidget.h  followupreminderinfowidget.cpp  followupreminderinfowidget.h  followupremindermanager.cpp  followupremindermanager.h  followupremindernoanswerdialog.cpp  followupremindernoanswerdialog.h  followupreminderutil.cpp  followupreminderutil.h
agents/followupreminderagent/autotests/: CMakeLists.txt  followupreminderconfigtest.cpp  followupreminderconfigtest.h  followupreminderinfotest.cpp  followupreminderinfotest.h  followupremindernoanswerdialogtest.cpp  followupremindernoanswerdialogtest.h
agents/followupreminderagent/jobs/: followupreminderfinishtaskjob.cpp  followupreminderfinishtaskjob.h  followupreminderjob.cpp  followupreminderjob.h  followupremindershowmessagejob.cpp  followupremindershowmessagejob.h
agents/mailfilteragent/: CMakeLists.txt  dummykernel.cpp  dummykernel.h  filterlogdialog.cpp  filterlogdialog.h  filtermanager.cpp  filtermanager.h  mailfilteragent.cpp  mailfilteragent.h  mailfilterpurposemenuwidget.cpp  mailfilterpurposemenuwidget.h
agents/mailfilteragent/tests/filterlogdialog/: CMakeLists.txt  filterlogdialog_gui.cpp
agents/mailfilteragent/tests/mailfilteragentdbus/: CMakeLists.txt  mailagentdbus_gui.cpp  mailagentdbuswidget.cpp  mailagentdbuswidget.h
agents/mailfilteragent/tests/test_dbus_interface/: CMakeLists.txt  clientdbus_gui.cpp  clientdbuswidget.cpp  (+4 more)
agents/mailmergeagent/: CMakeLists.txt  mailmergeagent.cpp  mailmergeagent.h  mailmergeconfiguredialog.cpp  mailmergeconfiguredialog.h  mailmergeconfigurewidget.cpp  mailmergeconfigurewidget.h  mailmergemanager.cpp  mailmergemanager.h  mailmergeutil.h
agents/mailmergeagent/autotests/: CMakeLists.txt
agents/sendlateragent/: CMakeLists.txt  sendlateragent.cpp  sendlateragent.h  sendlaterconfigurewidget.cpp  sendlaterconfigurewidget.h  sendlaterinfoconfigwidget.cpp  sendlaterinfoconfigwidget.h  sendlaterjob.cpp  sendlaterjob.h  sendlatermanager.cpp  sendlatermanager.h  sendlaterremovemessagejob.cpp  sendlaterremovemessagejob.h  sendlaterutil.cpp  sendlaterutil.h  sendlaterutil_p.h
agents/sendlateragent/autotests/: sendlaterconfigtest.cpp  sendlaterconfigtest.h  sendlaterutiltest.cpp  sendlaterutiltest.h
agents/sendlateragent/tests/: sendlaterinfo_gui.cpp
agents/unifiedmailboxagent/: CMakeLists.txt  common.h  mailkernel.cpp  mailkernel.h  settingsdialog.cpp  settingsdialog.h  unifiedmailbox.cpp  unifiedmailbox.h  unifiedmailboxagent.cpp  unifiedmailboxagent.h  unifiedmailboxeditor.cpp  unifiedmailboxeditor.h  unifiedmailboxmanager.cpp  unifiedmailboxmanager.h  utils.h
agents/unifiedmailboxagent/autotests/: CMakeLists.txt  unifiedmailboxmanagertest.cpp
src/ai/: CMakeLists.txt  README.md  aiconfigwidget.cpp  aiconfigwidget.h  aifollowupdialog.cpp  aifollowupdialog.h  aimainwidgetextension.cpp  aimainwidgetextension.h  aimanager.cpp  aimanager.h  aireplydialog.cpp  aireplydialog.h  aiserviceinterface.h  aisummarydialog.cpp  aisummarydialog.h  aitaskdialog.cpp  aitaskdialog.h  apply_patches.sh  kmainwidget_ai_patch.cpp  kmainwidget_ai_patch2.cpp  kmainwidget_ai_patch3.cpp  kmainwidget_ai_patch4.cpp  kmainwidget_ai_patch5.cpp  kmainwidgetaiintegration.cpp  kmainwidgetaiintegration.h  kmmainwidgetaifilter.cpp  kmmainwidgetaifilter.h  korganizerintegration.cpp  korganizerintegration.h  localaiservice.cpp  localaiservice.h
src/ai/python/: ai_email_categorizer.py  ai_email_summarizer.py  ai_followup_detector.py  ai_reply_generator.py  ai_task_extractor.py
src/ai/widgets/: CMakeLists.txt  aicategoryindicatorwidget.cpp  aicategoryindicatorwidget.h  aireplydraftwidget.cpp  aireplydraftwidget.h
src/autotests/: CMakeLists.txt  commandlineinfotest.cpp  commandlineinfotest.h  createfollowupreminderonexistingmessagejobtest.cpp  createfollowupreminderonexistingmessagejobtest.h  cryptostateindicatorwidgettest.cpp  cryptostateindicatorwidgettest.h  displaymessageformatactionmenutest.cpp  displaymessageformatactionmenutest.h  dummy_test.cpp  identityaddvcarddialogtest.cpp  identityaddvcarddialogtest.h  kactionmenutransporttest.cpp  kactionmenutransporttest.h  kmcommandstest.cpp  kmcommandstest.h  kmcomposerwintest.cpp  kmcomposerwintest.h  tagselectdialogtest.cpp  tagselectdialogtest.h
src/kontactplugin/kmail/: CMakeLists.txt  kcmkmailsummary.cpp  kcmkmailsummary.h  kmail_plugin.cpp  kmail_plugin.h  summarywidget.cpp  summarywidget.h
src/kontactplugin/summary/: CMakeLists.txt  dropwidget.cpp  dropwidget.h  kcmkontactsummary.cpp  kcmkontactsummary.h  summaryview_part.cpp  summaryview_part.h  summaryview_plugin.cpp  summaryview_plugin.h
(+371 files in other folders)
